--- a/Areas/AdminHotels/Views/Admins/Delete.cshtml
+++ b/Areas/AdminHotels/Views/Admins/Delete.cshtml
@@ -1,51 +1,51 @@
 ﻿@model HotelManagement.Models.Admin
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Xóa quản trị viên";
 }
 
-<h1>Delete</h1>
+<h1 style="color: #197fca;">Xóa quản trị viên</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3 style="color: #ec4e45;">Bạn có chắc chắn muốn xóa không?</h3>
 <div>
-    <h4>Admin</h4>
+    <h4 style="color: #ec4e45;">Thông tin quản trị viên</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2" style="color: #197fca;">
             @Html.DisplayNameFor(model => model.Name)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Name)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2" style="color: #197fca;">
             @Html.DisplayNameFor(model => model.Email)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Email)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2" style="color: #197fca;">
             @Html.DisplayNameFor(model => model.Phone)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Phone)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2" style="color: #197fca;">
             @Html.DisplayNameFor(model => model.Password)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Password)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2" style="color: #197fca;">
             @Html.DisplayNameFor(model => model.Role)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Role)
         </dd>
     </dl>
-    
-    <form asp-action="Delete">
+
+    <form asp-action="Delete" style="margin-top: 20px;">
         <input type="hidden" asp-for="AdminId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Xóa" class="btn btn-danger" style="background-color: #ec4e45; border-color: #ec4e45;" /> 
+        <a asp-action="Index" style="color: #197fca;">Quay lại danh sách</a>
     </form>
 </div>
