--- a/Areas/AdminHotels/Views/Admins/Details.cshtml
+++ b/Areas/AdminHotels/Views/Admins/Details.cshtml
@@ -1,48 +1,49 @@
 ﻿@model HotelManagement.Models.Admin
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Chi Tiết";
 }
 
-<h1>Details</h1>
+<h1 style="color: #197fca;">Chi Tiết</h1>
 
 <div>
-    <h4>Admin</h4>
-    <hr />
+    <h4 style="color: #197fca;">Quản Trị Viên</h4>
+    <hr style="border-color: #197fca;" />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2" style="color: #ec4e45;">
             @Html.DisplayNameFor(model => model.Name)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Name)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2" style="color: #ec4e45;">
             @Html.DisplayNameFor(model => model.Email)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Email)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2" style="color: #ec4e45;">
             @Html.DisplayNameFor(model => model.Phone)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Phone)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2" style="color: #ec4e45;">
             @Html.DisplayNameFor(model => model.Password)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Password)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2" style="color: #ec4e45;">
             @Html.DisplayNameFor(model => model.Role)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Role)
         </dd>
     </dl>
 </div>
+
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.AdminId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model?.AdminId" style="color: #197fca;">Chỉnh Sửa</a>
+    <a asp-action="Index" style="color: #197fca;">Quay Lại Danh Sách</a>
 </div>
