--- a/Areas/AdminHotels/Views/Bookings/Delete.cshtml
+++ b/Areas/AdminHotels/Views/Bookings/Delete.cshtml
@@ -1,58 +1,58 @@
 ﻿@model HotelManagement.Models.Booking
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Xóa";
     Layout = "~/Areas/AdminHotels/Views/Shared/Admin.cshtml";
 }
 
-<h1>Delete</h1>
+<h1 style="color: #197fca;">Xóa Đặt Phòng</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3 style="color: #ec4e45;">Bạn chắc chắn muốn xóa đặt phòng này?</h3>
 <div>
-    <h4>Booking</h4>
+    <h4 style="color: #197fca;">Thông Tin Đặt Phòng</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2" style="color: #197fca;">
             @Html.DisplayNameFor(model => model.CheckInDate)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.CheckInDate)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2" style="color: #197fca;">
             @Html.DisplayNameFor(model => model.CheckOutDate)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.CheckOutDate)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2" style="color: #197fca;">
             @Html.DisplayNameFor(model => model.TotalPrice)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.TotalPrice)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2" style="color: #197fca;">
             @Html.DisplayNameFor(model => model.Status)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Status)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2" style="color: #197fca;">
             @Html.DisplayNameFor(model => model.Customer)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Customer.CustomerId)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2" style="color: #197fca;">
             @Html.DisplayNameFor(model => model.Room)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Room.RoomId)
         </dd>
     </dl>
-    
+
     <form asp-action="Delete">
         <input type="hidden" asp-for="BookingId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Xóa" class="btn btn-danger" style="background-color: #ec4e45; border-color: #ec4e45;" />
+        <a asp-action="Index" style="color: #197fca;">Quay Lại Danh Sách</a>
     </form>
 </div>
