--- a/Areas/AdminHotels/Views/Bookings/Details.cshtml
+++ b/Areas/AdminHotels/Views/Bookings/Details.cshtml
@@ -1,55 +1,56 @@
 ﻿@model HotelManagement.Models.Booking
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Chi Tiết";
     Layout = "~/Areas/AdminHotels/Views/Shared/Admin.cshtml";
 }
 
-<h1>Details</h1>
+<h1 style="color: #197fca;">Chi Tiết Đặt Phòng</h1>
 
 <div>
-    <h4>Booking</h4>
+    <h4 style="color: #197fca;">Thông Tin Đặt Phòng</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2" style="color: #197fca;">
             @Html.DisplayNameFor(model => model.CheckInDate)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.CheckInDate)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2" style="color: #197fca;">
             @Html.DisplayNameFor(model => model.CheckOutDate)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.CheckOutDate)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2" style="color: #197fca;">
             @Html.DisplayNameFor(model => model.TotalPrice)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.TotalPrice)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2" style="color: #197fca;">
             @Html.DisplayNameFor(model => model.Status)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Status)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2" style="color: #197fca;">
             @Html.DisplayNameFor(model => model.Customer)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Customer.CustomerId)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Customer.Name)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2" style="color: #197fca;">
             @Html.DisplayNameFor(model => model.Room)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Room.RoomId)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Room.RoomNumber)
         </dd>
     </dl>
 </div>
+
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.BookingId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model?.BookingId" style="color: #ec4e45;">Chỉnh Sửa</a>
+    <a asp-action="Index" style="color: #197fca;">Quay Lại Danh Sách</a>
 </div>
