--- a/Areas/AdminHotels/Views/Reviews/Delete.cshtml
+++ b/Areas/AdminHotels/Views/Reviews/Delete.cshtml
@@ -1,52 +1,102 @@
 ﻿@model HotelManagement.Models.Review
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Xóa";
     Layout = "~/Areas/AdminHotels/Views/Shared/Admin.cshtml";
 }
 
-<h1>Delete</h1>
+<h1>Xóa Đánh Giá</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Bạn có chắc chắn muốn xóa không?</h3>
+
 <div>
-    <h4>Review</h4>
+    <h4>Thông Tin Đánh Giá</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Rating)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Rating)
         </dd>
-        <dt class = "col-sm-2">
+
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Comment)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Comment)
         </dd>
-        <dt class = "col-sm-2">
+
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.ReviewDate)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.ReviewDate)
         </dd>
-        <dt class = "col-sm-2">
+
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Customer)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Customer.CustomerId)
         </dd>
-        <dt class = "col-sm-2">
+
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Hotel)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Hotel.HotelId)
         </dd>
     </dl>
-    
+
     <form asp-action="Delete">
         <input type="hidden" asp-for="ReviewId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Xóa" class="btn btn-danger" /> 
+        <a asp-action="Index" class="btn btn-secondary">Quay Lại Danh Sách</a>
     </form>
 </div>
+    <style>
+        /* Custom colors and styling */
+        .btn-danger {
+            background-color: #ec4e45;
+            border-color: #ec4e45;
+        }
+
+            .btn-danger:hover {
+                background-color: #197fca;
+                border-color: #197fca;
+            }
+
+        .btn-secondary {
+            background-color: #f8f9fa;
+            border-color: #197fca;
+        }
+
+            .btn-secondary:hover {
+                background-color: #ec4e45;
+                border-color: #ec4e45;
+            }
+
+        .col-sm-2 {
+            font-weight: bold;
+            color: #197fca;
+        }
+
+        .col-sm-10 {
+            color: #333;
+        }
+
+        h4 {
+            color: #197fca;
+        }
+
+        hr {
+            border-top: 2px solid #ec4e45;
+        }
+    </style>
+
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+}
