--- a/Areas/AdminHotels/Views/Reviews/Details.cshtml
+++ b/Areas/AdminHotels/Views/Reviews/Details.cshtml
@@ -1,49 +1,100 @@
 ﻿@model HotelManagement.Models.Review
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Chi Tiết Đánh Giá";
     Layout = "~/Areas/AdminHotels/Views/Shared/Admin.cshtml";
 }
 
-<h1>Details</h1>
+<h1>Chi Tiết Đánh Giá</h1>
 
 <div>
-    <h4>Review</h4>
+    <h4>Thông Tin Đánh Giá</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Rating)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Rating)
         </dd>
-        <dt class = "col-sm-2">
+
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Comment)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Comment)
         </dd>
-        <dt class = "col-sm-2">
+
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.ReviewDate)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.ReviewDate)
         </dd>
-        <dt class = "col-sm-2">
+
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Customer)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Customer.CustomerId)
         </dd>
-        <dt class = "col-sm-2">
+
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Hotel)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Hotel.HotelId)
         </dd>
     </dl>
 </div>
+
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.ReviewId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model?.ReviewId" class="btn btn-primary">Chỉnh Sửa</a> 
+    <a asp-action="Index" class="btn btn-secondary">Quay Lại Danh Sách</a>
 </div>
+
+    <style>
+        /* Custom colors and styling */
+        .btn-primary {
+            background-color: #197fca;
+            border-color: #197fca;
+        }
+
+            .btn-primary:hover {
+                background-color: #ec4e45;
+                border-color: #ec4e45;
+            }
+
+        .btn-secondary {
+            background-color: #f8f9fa;
+            border-color: #197fca;
+        }
+
+            .btn-secondary:hover {
+                background-color: #ec4e45;
+                border-color: #ec4e45;
+            }
+
+        .col-sm-2 {
+            font-weight: bold;
+            color: #197fca;
+        }
+
+        .col-sm-10 {
+            color: #333;
+        }
+
+        h4 {
+            color: #197fca;
+        }
+
+        hr {
+            border-top: 2px solid #ec4e45;
+        }
+    </style>
+
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+}
