--- a/Areas/AdminHotels/Views/ServiceUsages/Delete.cshtml
+++ b/Areas/AdminHotels/Views/ServiceUsages/Delete.cshtml
@@ -1,46 +1,54 @@
 ﻿@model HotelManagement.Models.ServiceUsage
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Xoá";
     Layout = "~/Areas/AdminHotels/Views/Shared/Admin.cshtml";
 }
 
-<h1>Delete</h1>
+<h1 style="color: #197fca;">Xoá Dịch Vụ Sử Dụng</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3 style="color: #ec4e45;">Bạn có chắc chắn muốn xoá không?</h3>
+
 <div>
-    <h4>ServiceUsage</h4>
+    <h4 style="color: #ec4e45;">Dịch Vụ Sử Dụng</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <!-- Quantity -->
+        <dt class="col-sm-2" style="color: #197fca;">
             @Html.DisplayNameFor(model => model.Quantity)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Quantity)
         </dd>
-        <dt class = "col-sm-2">
+
+        <!-- TotalPrice -->
+        <dt class="col-sm-2" style="color: #197fca;">
             @Html.DisplayNameFor(model => model.TotalPrice)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.TotalPrice)
         </dd>
-        <dt class = "col-sm-2">
+
+        <!-- Booking -->
+        <dt class="col-sm-2" style="color: #197fca;">
             @Html.DisplayNameFor(model => model.Booking)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Booking.BookingId)
         </dd>
-        <dt class = "col-sm-2">
+
+        <!-- Service -->
+        <dt class="col-sm-2" style="color: #197fca;">
             @Html.DisplayNameFor(model => model.Service)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Service.ServiceId)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Service.Name)
         </dd>
     </dl>
-    
+
     <form asp-action="Delete">
         <input type="hidden" asp-for="UsageId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Xoá" class="btn btn-danger" style="background-color: #ec4e45; color: white; border-color: #ec4e45; padding: 5px 15px;" />
+        <a asp-action="Index" class="btn" style="background-color: #197fca; color: white; border-color: #197fca; padding: 5px 15px;">Quay lại danh sách</a>
     </form>
 </div>
