--- a/Areas/AdminHotels/Views/Services/Delete.cshtml
+++ b/Areas/AdminHotels/Views/Services/Delete.cshtml
@@ -1,40 +1,41 @@
 ﻿@model HotelManagement.Models.Service
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Xóa";
     Layout = "~/Areas/AdminHotels/Views/Shared/Admin.cshtml";
 }
 
-<h1>Delete</h1>
+<h1 style="color: #197fca;">Xóa Dịch Vụ</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3 style="color: #ec4e45;">Bạn có chắc chắn muốn xóa dịch vụ này không?</h3>
+
 <div>
-    <h4>Service</h4>
+    <h4 style="color: #197fca;">Dịch Vụ</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2" style="color: #197fca;">
             @Html.DisplayNameFor(model => model.Name)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10" style="color: #333;">
             @Html.DisplayFor(model => model.Name)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2" style="color: #197fca;">
             @Html.DisplayNameFor(model => model.Description)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10" style="color: #333;">
             @Html.DisplayFor(model => model.Description)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2" style="color: #197fca;">
             @Html.DisplayNameFor(model => model.Price)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10" style="color: #333;">
             @Html.DisplayFor(model => model.Price)
         </dd>
     </dl>
-    
-    <form asp-action="Delete">
+
+    <form asp-action="Delete" style="display: flex; align-items: center;">
         <input type="hidden" asp-for="ServiceId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <button type="submit" class="btn btn-danger" style="background-color: #ec4e45; border-color: #ec4e45; color: white;">Xóa</button> 
+        <a asp-action="Index" class="btn btn-secondary" style="background-color: #197fca; border-color: #197fca; color: white; margin-left: 10px;">Quay lại danh sách</a>
     </form>
 </div>
