--- a/Areas/AdminHotels/Views/Services/Index.cshtml
+++ b/Areas/AdminHotels/Views/Services/Index.cshtml
@@ -1,48 +1,49 @@
 ﻿@model IEnumerable<HotelManagement.Models.Service>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Danh Sách Dịch Vụ";
     Layout = "~/Areas/AdminHotels/Views/Shared/Admin.cshtml";
 }
 
-<h1>Index</h1>
+<h1 style="color: #197fca;">Danh Sách Dịch Vụ</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create" class="btn btn-primary" style="background-color: #197fca; border-color: #197fca;">Tạo Dịch Vụ Mới</a>
 </p>
-<table class="table">
+<table class="table table-striped">
     <thead>
         <tr>
-            <th>
+            <th style="color: #197fca;">
                 @Html.DisplayNameFor(model => model.Name)
             </th>
-            <th>
+            <th style="color: #197fca;">
                 @Html.DisplayNameFor(model => model.Description)
             </th>
-            <th>
+            <th style="color: #197fca;">
                 @Html.DisplayNameFor(model => model.Price)
             </th>
-            <th></th>
+            <th style="color: #197fca;"></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Description)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Price)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.ServiceId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.ServiceId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.ServiceId">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Description)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Price)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.ServiceId" class="btn btn-warning" style="background-color: #ec4e45; border-color: #ec4e45; color: white;">Chỉnh Sửa</a> 
+                    <a asp-action="Details" asp-route-id="@item.ServiceId" class="btn btn-info" style="background-color: #197fca; border-color: #197fca; color: white;">Chi Tiết</a> 
+                    <a asp-action="Delete" asp-route-id="@item.ServiceId" class="btn btn-danger" style="background-color: #ec4e45; border-color: #ec4e45; color: white;">Xóa</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
